# MusicVisualizerV2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Graphic/: graphic.h  lv_conf.h
Graphic/main_page/: mainpage.c  mainpage.h
Graphic/music_visualizer_pages/: basicmusicvisual.c  mvpage.h
Graphic/sub_pages/: musicvisualtest.c  subpage.c  subpage.h
MusicProcessor/: musicprocessor.c  musicprocessor.h  ring_buffer.c
SharedLib_Pi/CrossCompiler/: README.md
SharedLib_Pi/pi-sysroot/: README.md
deploy/: musicvisualizer
deploy/lib/: libavdevice.so.58.13.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libavutil.so.56.70.100  libswresample.so.3.9.100  libswscale.so.5.9.100
